--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 aiohttp @ file:///C:/b/abs_27h_1rpxgd/croot/aiohttp_1707342354614/work
 aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
+altair==5.2.0
 anyio @ file:///C:/b/abs_847uobe7ea/croot/anyio_1706220224037/work
 async-timeout @ file:///C:/b/abs_c8fgiuixkq/croot/async-timeout_1703097556097/work
 attrs @ file:///C:/b/abs_35n0jusce8/croot/attrs_1695717880170/work
+blinker==1.7.0
 Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
+cachetools==5.3.2
 certifi @ file:///C:/b/abs_35d7n66oz9/croot/certifi_1707229248467/work/certifi
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 click @ file:///C:/b/abs_f9ihnt72pu/croot/click_1698129847492/work
@@ -12,21 +15,30 @@ dataclasses-json @ file:///C:/b/abs_edxyjf9i7x/croot/dataclasses-json_1682969367
 distro @ file:///C:/b/abs_a3uni_yez3/croot/distro_1701455052240/work
 exceptiongroup @ file:///C:/b/abs_c5h1o1_b5b/croot/exceptiongroup_1706031441653/work
 frozenlist @ file:///C:/b/abs_d8e__s1ys3/croot/frozenlist_1698702612014/work
+gitdb==4.0.11
+GitPython==3.1.41
 greenlet @ file:///C:/b/abs_a6c75ie0bc/croot/greenlet_1702060012174/work
 h11 @ file:///C:/b/abs_1czwoyexjf/croot/h11_1706652332846/work
 httpcore @ file:///C:/b/abs_55n7g233bw/croot/httpcore_1706728507241/work
 httpx @ file:///C:/b/abs_70wr6jzznw/croot/httpx_1706887145357/work
 idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
+importlib-metadata==7.0.1
 iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
+Jinja2==3.1.3
 jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1695536281965/work
 jsonpointer==2.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 langchain @ file:///home/conda/feedstock_root/build_artifacts/langchain_1707450704401/work
 langchain-community @ file:///home/conda/feedstock_root/build_artifacts/langchain-community_1707355274488/work
 langchain-core @ file:///home/conda/feedstock_root/build_artifacts/langchain-core_1707444007205/work
 langchain-openai==0.0.5
 langsmith==0.0.87
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow @ file:///C:/b/abs_2a28q2ehfk/croot/marshmallow_1682620739649/work
 marshmallow-enum @ file:///C:/ci_310/marshmallow-enum_1642674085091/work
+mdurl==0.1.2
 mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
 mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
 mkl-service==2.4.0
@@ -38,26 +50,43 @@ openai==1.12.0
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
 pandas @ file:///C:/b/abs_fej9bi0gew/croot/pandas_1702318041921/work/dist/pandas-2.1.4-cp310-cp310-win_amd64.whl#sha256=186ecb939535861d7a5c9527cbb8529ba1031ca6e0c2ddfb054baa09e2fcc2e0
 pandas-stubs @ file:///C:/b/abs_40x234mbvi/croot/pandas-stubs_1705008121262/work
+pillow==10.2.0
 pluggy @ file:///C:/ci/pluggy_1648042746254/work
+protobuf==4.25.2
+pyarrow==15.0.0
 pydantic @ file:///C:/b/abs_9byjrk31gl/croot/pydantic_1695798904828/work
+pydeck==0.8.1b0
+Pygments==2.17.2
 pytest @ file:///C:/b/abs_48heoo_k8y/croot/pytest_1690475385915/work
 pytest-subtests @ file:///home/conda/feedstock_root/build_artifacts/pytest-subtests_1684165519839/work
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 python-dotenv @ file:///C:/b/abs_edyrwjya7k/croot/python-dotenv_1669132572913/work
 pytz @ file:///C:/b/abs_19q3ljkez4/croot/pytz_1695131651401/work
 PyYAML @ file:///C:/b/abs_782o3mbw7z/croot/pyyaml_1698096085010/work
+referencing==0.33.0
 regex==2023.12.25
 requests @ file:///C:/b/abs_474vaa3x9e/croot/requests_1707355619957/work
+rich==13.7.0
+rpds-py==0.17.1
 six @ file:///tmp/build/80754af9/six_1644875935023/work
+smmap==5.0.1
 sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
 SQLAlchemy @ file:///C:/b/abs_876dxwqqu8/croot/sqlalchemy_1705089154696/work
+streamlit==1.31.0
 tenacity @ file:///C:/b/abs_ddkoa9nju6/croot/tenacity_1682972298929/work
 tiktoken==0.5.2
+toml==0.10.2
 tomli @ file:///C:/Windows/TEMP/abs_ac109f85-a7b3-4b4d-bcfd-52622eceddf0hy332ojo/croots/recipe/tomli_1657175513137/work
+toolz==0.12.1
+tornado==6.4
 tqdm @ file:///C:/b/abs_f76j9hg7pv/croot/tqdm_1679561871187/work
 types-pytz @ file:///C:/b/abs_e3rdamg6_o/croot/types-pytz_1665514258134/work
 typing-inspect @ file:///C:/b/abs_7eg5ofvujb/croot/typing_inspect_1695742119921/work
 typing_extensions @ file:///C:/b/abs_72cdotwc_6/croot/typing_extensions_1705599364138/work
 tzdata @ file:///croot/python-tzdata_1690578112552/work
+tzlocal==5.2
 urllib3 @ file:///C:/b/abs_a9n398cvep/croot/urllib3_1700840517182/work
+validators==0.22.0
+watchdog==4.0.0
 yarl @ file:///C:/b/abs_8bxwdyhjvp/croot/yarl_1701105248152/work
+zipp==3.17.0
